## test sub-directory of the DSim project
include $(top_srcdir)/Makefile.common

MAINTAINERCLEANFILES = Makefile.in

##
# The following line is commented until all the components have been migrated
# to Boost Unit Test Framework (from ExtraCC/CPUnit)
# TODO: migrate all the other components
#SUBDIRS = boost trademgen simcrs travelccm dsim
SUBDIRS = boost dsim

EXTRA_DIST =

##
check_PROGRAMS =
TESTS = $(check_PROGRAMS)
XFAIL_TESTS = #
